fix running cli klamma